UF-18127 - Bump dept44 to 8.0.1
Bumps dept44 to 8.0.1 and adjusts where needed.